--- a/app/globals.css
+++ b/app/globals.css
@@ -48,3 +48,11 @@ body {
 }
 
 
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
